--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -26,12 +26,19 @@
             </form>
         </div>
         <div class="col-md-6">
-            <form class="form-inline">
+            <form class="form-inline" id="form-hello">
                 <div class="form-group">
                     <label for="name">What is your name?</label>
                     <input type="text" id="name" class="form-control" placeholder="Your name here...">
                 </div>
                 <button id="send" class="btn btn-default" type="submit">Send</button>
+            </form>
+            <form class="form-inline" id ="form-guess">
+                <div class="form-group">
+                    <label for="guess">What is your guess?</label>
+                    <input type="text" id="guess" class="form-control" placeholder="Your guess here...">
+                </div>
+                <button id="send-guess" class="btn btn-default" type="submit">Send</button>
             </form>
         </div>
     </div>
@@ -44,6 +51,8 @@
                 </tr>
                 </thead>
                 <tbody id="greetings">
+                </tbody>
+                <tbody id="guess-match">
                 </tbody>
             </table>
         </div>
