--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -17,13 +17,13 @@
 <div id="main-content" class="container">
     <div class="row">
         <div class="col-md-6">
-            <form class="form-inline">
+            <!--<form class="form-inline">
                 <div class="form-group">
                     <label for="connect">WebSocket connection:</label>
                     <button id="connect" class="btn btn-default" type="submit">Connect</button>
                     <button id="disconnect" class="btn btn-default" type="submit" disabled="disabled">Disconnect</button>
                 </div>
-            </form>
+            </form>-->
         </div>
         <div class="col-md-6">
             <form class="form-inline" id="form-hello">
