--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Hello WebSocket</title>
+    <title>Hello WebSocket Guess game</title>
     <link href="/webjars/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="/main.css" rel="stylesheet">
     <script src="/webjars/jquery/jquery.min.js"></script>
@@ -43,20 +43,28 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-12">
-            <table id="conversation" class="table table-striped">
+        <div class="col-md-9">
+            <table id="conversation" class="table table-striped table-conversation">
                 <thead>
                 <tr>
-                    <th>Greetings</th>
+                    <th>Guess</th>
                 </tr>
                 </thead>
-                <tbody id="greetings">
-                </tbody>
                 <tbody id="guess-match">
                 </tbody>
             </table>
         </div>
+        <div class="col-md-3">
+            <table class="table table-striped table-conversation">
+                <thead>
+                <tr>
+                    <th>Players</th>
+                </tr>
+                </thead>
+                <tbody id="greetings">
+                </tbody>
+            </table>
+        </div>
     </div>
-</div>
 </body>
 </html>
