--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -17,6 +17,7 @@
 <div id="main-content" class="container">
     <div class="row">
         <div class="col-md-6">
+            <!-- not needed-->
             <!--<form class="form-inline">
                 <div class="form-group">
                     <label for="connect">WebSocket connection:</label>
