--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,21 +2,43 @@
 <html>
 <head>
     <title>Hello WebSocket Guess game</title>
+    <!-- css -->
     <link href="/webjars/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/p5.min.js"></script>
     <link href="/main.css" rel="stylesheet">
+    <link href="login.css" rel="stylesheet">
+    <!-- js -->
     <script src="/webjars/jquery/jquery.min.js"></script>
     <script src="/webjars/sockjs-client/sockjs.min.js"></script>
     <script src="/webjars/stomp-websocket/stomp.min.js"></script>
     <script src="/app.js"></script>
-    <script src="/flock.js"></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/p5.min.js"></script>-->
+    <!--<script src="/flock.js"></script>-->
 </head>
 <body>
 <noscript><h2 style="color: #ff0000">Seems your browser doesn't support Javascript! Websocket relies on Javascript being
     enabled. Please enable
     Javascript and reload this page!</h2></noscript>
+<section id="login">
+    <hgroup>
+        <p class='welcome-text'>Welcome!</p>
+        <h2 class='guess-text'>Guess the number!</h2>
+    </hgroup>
+    <form method = "post" class = "log-form">
+        <div class="group log-input">
+            <input type="text" id = "name" name = "name" class="input-name" required/>
+
+            <span class="floating-label">your name</span>
+        </div>
+        <div class="container-log-btn">
+            <button type="submit" id="send" name = "btn_submit" class="log-form-btn">
+                <span>Play</span>
+            </button>
+        </div>
+    </form>
+</section>
+<section id="main-content">
 <br/>
-<div id="main-content" class="container">
+<div class="container">
     <div class="row">
         <div class="col-md-6">
             <!-- not needed-->
@@ -29,13 +51,13 @@
             </form>-->
         </div>
         <div class="col-md-6">
-            <form class="form-inline" id="form-hello">
-                <div class="form-group">
-                    <label for="name">What is your name?</label>
-                    <input type="text" id="name" class="form-control" placeholder="Your name here...">
-                </div>
-                <button id="send" class="btn btn-default" type="submit">Send</button>
-            </form>
+            <!--<form class="form-inline" id="form-hello">-->
+            <!--    <div class="form-group">-->
+            <!--        <label for="name">What is your name?</label>-->
+            <!--        <input type="text" id="name" class="form-control" placeholder="Your name here...">-->
+            <!--    </div>-->
+            <!--    <button id="send" class="btn btn-default" type="submit">Send</button>-->
+            <!--</form>-->
             <form class="form-inline" id ="form-guess">
                 <div class="form-group">
                     <label for="guess">What is your guess?</label>
@@ -69,5 +91,7 @@
             </table>
         </div>
     </div>
+</div>
+</section>
 </body>
 </html>
