--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -11,6 +11,7 @@
     <script src="/webjars/sockjs-client/sockjs.min.js"></script>
     <script src="/webjars/stomp-websocket/stomp.min.js"></script>
     <script src="/app.js"></script>
+    <script src="/guess-text.js"></script>
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/p5.min.js"></script>-->
     <!--<script src="/flock.js"></script>-->
 </head>
@@ -26,7 +27,6 @@
     <form method = "post" class = "log-form">
         <div class="group log-input">
             <input type="text" id = "name" name = "name" class="input-name" required />
-
             <span class="floating-label">your name</span>
         </div>
         <div class="container-log-btn">
@@ -41,29 +41,25 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6">
-            <!-- not needed-->
-            <!--<form class="form-inline">
-                <div class="form-group">
-                    <label for="connect">WebSocket connection:</label>
-                    <button id="connect" class="btn btn-default" type="submit">Connect</button>
-                    <button id="disconnect" class="btn btn-default" type="submit" disabled="disabled">Disconnect</button>
+            <div class="package-container">
+                <div class="packages">
+                    <div class="pricing-title">
+                        Info
+                    </div>
+                    <ul class="info-list text-center">
+                        <li>T means right number right spot</li>
+                        <li>V means right number wrong spot</li>
+                    </ul>
                 </div>
-            </form>-->
+            </div>
         </div>
         <div class="col-md-6">
-            <!--<form class="form-inline" id="form-hello">-->
-            <!--    <div class="form-group">-->
-            <!--        <label for="name">What is your name?</label>-->
-            <!--        <input type="text" id="name" class="form-control" placeholder="Your name here...">-->
-            <!--    </div>-->
-            <!--    <button id="send" class="btn btn-default" type="submit">Send</button>-->
-            <!--</form>-->
             <form class="form-inline" id ="form-guess">
                 <div class="form-group">
-                    <label for="guess">What is your guess?</label>
-                    <input type="text" id="guess" class="form-control" placeholder="Your guess here...">
+                    <label for="guess" id="label-guess">What is your </label>
+                    <input type="text" pattern=".{4}" title="4 characters min/max" id="guess" class="form-control" placeholder="Your guess here...">
                 </div>
-                <button id="send-guess" class="btn btn-default" type="submit">Send</button>
+                <button id="send-guess" class="btn btn--stripe" type="submit">Send</button>
             </form>
         </div>
     </div>
