--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -64,10 +64,10 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-9">
+        <div class="col-md-8">
             <div class="chatroom">
                 <div class="chatroom_section chatroom_header">
-                    <div class="chatroom_section chatroom_header_name"><span class="material-icons">emoji_objects</span>Guess</div>
+                    <div class="chatroom_section chatroom_header_name"><span class="material-icons">emoji_objects</span>Chatroom guesses</div>
                 </div>
                 <div class="chatroom_section chatroom_history">
                     <ul class="chatroom_history_list" id="guess-match">
@@ -75,15 +75,25 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-2">
+            <div class="chatroom">
+                <div class="guests_section chatroom_header">
+                    <span class="guests_list_icon material-icons">history_edu</span>
+                    <div class="guests_section chatroom_header_name"><span class="guests_list_name">History</span></div>
+                </div>
+                <div class="chatroom_section chatroom_history">
+                    <ul class="score_history_list" id="history"></ul>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-2">
             <div class="chatroom">
                 <div class="guests_section chatroom_header">
                     <span class="guests_list_icon material-icons">groups</span>
                     <div class="guests_section chatroom_header_name"><span class="guests_list_name">Players</span></div>
                 </div>
                 <div class="chatroom_section chatroom_history">
-                    <ul class="guests_history_list" id="greetings">
-                    </ul>
+                    <ul class="guests_history_list" id="greetings"></ul>
                 </div>
             </div>
         </div>
