add user guess list

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -64,7 +64,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-5">
             <div class="chatroom">
                 <div class="chatroom_section chatroom_header">
                     <div class="chatroom_section chatroom_header_name"><span class="material-icons">emoji_objects</span>Chatroom guesses</div>
@@ -72,6 +72,17 @@
                 <div class="chatroom_section chatroom_history">
                     <ul class="chatroom_history_list" id="guess-match">
                     </ul>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="chatroom">
+                <div class="guests_section chatroom_header">
+                    <span class="guests_list_icon material-icons">batch_prediction</span>
+                    <div class="guests_section chatroom_header_name"><span class="guests_list_name">My Guesses</span></div>
+                </div>
+                <div class="chatroom_section chatroom_history">
+                    <ul class="my_guess_list" id="my_guesses"></ul>
                 </div>
             </div>
         </div>
