add generate button (ui only)

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -46,6 +46,9 @@
                     <div class="pricing-title">
                         Info
                     </div>
+                    <span class="generate-new">
+                        <button id="generate-new" class="btn-gen-new btn--stripe" type="submit">generate new</button>
+                    </span>
                     <ul class="info-list text-center">
                         <li>T means right number right spot</li>
                         <li>V means right number wrong spot</li>
