add generate button (ui only)

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -46,12 +46,13 @@
                     <div class="pricing-title">
                         Info
                     </div>
-                    <span class="generate-new">
-                        <button id="generate-new" class="btn-gen-new btn--stripe" type="submit">generate new</button>
-                    </span>
-                    <ul class="info-list text-center">
+                    <div class="break"></div>
+                    <ul class="info-list">
                         <li>T means right number right spot</li>
+                        <div class="break"></div>
                         <li>V means right number wrong spot</li>
+                        <div class="break"></div>
+                        <li>A new number is generated when the old one is found</li>
                     </ul>
                 </div>
             </div>
